--- a/postgresql-typed.cabal
+++ b/postgresql-typed.cabal
@@ -58,6 +58,10 @@ Flag tls
   Description: Enable TLS (SSL) support in PostgreSQL server connections.
   Default: True
 
+Flag crypton
+  Description: Use crypton rather than cryptonite.
+  Default: True
+
 Library
   default-language:    Haskell2010
   Build-Depends:
@@ -93,7 +97,11 @@ Library
     Database.PostgreSQL.Typed.TypeCache
   GHC-Options: -Wall
   if flag(md5)
-    Build-Depends: cryptonite >= 0.5, memory >= 0.5
+    Build-Depends: memory >= 0.5
+    if flag(crypton)
+      Build-Depends: crypton
+    else
+      Build-Depends: cryptonite >= 0.5
   if flag(binary)
     Build-Depends: postgresql-binary >= 0.8, text >= 1, uuid >= 1.3, scientific >= 0.3
   else
@@ -110,7 +118,11 @@ Library
     Exposed-Modules:
       Database.PostgreSQL.Typed.HDBC
   if flag(tls)
-    Build-Depends: data-default, tls, x509, x509-store, x509-validation
+    Build-Depends: data-default, tls
+    if flag(crypton)
+      Build-Depends: crypton-x509, crypton-x509-store, crypton-x509-validation
+    else
+      Build-Depends: x509, x509-store, x509-validation
 
 test-suite test
   default-language:    Haskell2010
