--- a/postgresql-typed.cabal
+++ b/postgresql-typed.cabal
@@ -1,5 +1,5 @@
 Name:          postgresql-typed
-Version:       0.6.2.2
+Version:       0.6.2.3
 Cabal-Version: >= 1.10
 License:       BSD3
 License-File:  COPYING
@@ -60,7 +60,7 @@ Flag tls
 
 Flag crypton
   Description: Use crypton rather than cryptonite.
-  Default: False
+  Default: True
 
 Library
   default-language:    Haskell2010
